manifests/hub-core-services/database/namespace-hub-platform-data.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-data
  labels:
    name: platform-data
